3rd commit: Renaming HTML and CSS main files and erasing unnecessary lines.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="may2023.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css">
 <title>ULL Tours</title>
 </head>
 
@@ -13,14 +13,7 @@
   <!-- Navigation -->
   <nav class="navbar">
 	<a href="ull-may2023.html" class="logo">LOGO</a>
-	<!--
-    <button class="navbar-toggle" aria-label="Toggle navigation">
-      <span class="burger-icon"></span>
-    </button>
-	-->
 	<ul class="nav-links">
-      <!-- <li><a href="#services">Our Services</a></li> -->
-      <!-- <li><a href="#rates">Rates</a></li> -->
       <li><a href="#about">About Us</a></li>
       <li><a href="#fleet">Our Fleet</a></li>
       <li><a href="#testimonials">Testimonials</a></li>
@@ -92,13 +85,13 @@
         <div class="client-wrap">
           <img src="images/user.png" alt="user1">
           <div class="client-text">
-            <h3>Client One</h3>
-            <div class="star-rating">★★★★☆</div>
-            <p>May 24, 2023</p>
+            <h3>Seitrack --Ian Marty</h3>
+            <div class="star-rating">★★★★★</div>
+            <p>May 31, 2023</p>
           </div> <!-- 'client-text' ends -->
         </div> <!-- 'client-wrap' ends -->
-        <p>I called with a few questions about hiring a driver and I was so blown away by how wonderful Alfonso is and how helpful he was. 
-          Extremely satisfied with the quality of the services. Very prompt airport pickup, clean safe drive.</p>
+        <p>I have hired ULL continuously since 2008 to solve our ground transportation and logistical needs. They have 
+			supported the artist that I have worked on their shows, tours, festivals and promotional events (even some personal trips too).</p>
       </div>
       <div class="testimonial-card">
         <div class="client-wrap">
