--- a/book.html
+++ b/book.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>book</title>
-<link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
