--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="style.css" rel="stylesheet" type="text/css">
+<link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+<link rel="icon" type="image/png" href="/images/favicon.png">
 <title>ULL Tours</title>
 </head>
 
@@ -12,7 +14,9 @@
 <div class="container"> 
   <!-- Navigation -->
   <nav class="navbar">
-	<a href="ull-may2023.html" class="logo">LOGO</a>
+	<a href="index.html" class="logo">
+      <img src="images/logo-old.png" alt="Universal-Latin-Limo-logo">
+    </a>
 	<ul class="nav-links">
       <li><a href="#about">About Us</a></li>
       <li><a href="#fleet">Our Fleet</a></li>
