8th commit: Modifications based on June 5th, 2023 meeting.
Modified sections: Hero, Fleet, About and Testimonials.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <a href="#about" class="cta-outline">Contact Us</a>
   </section>
   <div id="mob-hero"></div>
+  <!-- Social Proof Section -->
   <!-- Book Section -->
   <section id="book">
 	<a 
@@ -56,11 +57,11 @@
       <h2 id="h2-bus">Buses</h2>
       <!-- SUV -->
       <ul id="ul-suv">
-        <li>2021 Chevrolet Suburban</li>
-        <li>2021 Cadillac Escalade Lux SUV</li>
-        <li>2021 Lincoln Navigator Lux SUV</li>
-        <li>2021 Expedition XLT</li>
-        <li>2021 Tahoe / Yukon</li>
+        <li>Chevrolet Suburban</li>
+        <li>Cadillac Escalade Lux SUV</li>
+        <li>Lincoln Navigator Lux SUV</li>
+        <li>Expedition XLT</li>
+        <li>Tahoe / Yukon</li>
       </ul>
       <!-- Special -->
       <ul id="ul-special">
@@ -71,27 +72,26 @@
       </ul>
       <!-- Bus -->
       <ul id="ul-bus">
-        <li>Sleeper Coach: 8-16 people</li>
         <li>Mini-Bus: 8-18 people</li>
         <li>Charter Bus: 8-18 people</li>
         <br>
       </ul>
-      <img src="images/suv-800x560.svg" alt="suv" id="img-suv">
-      <img src="images/special-800x560.svg" alt="special" id="img-special">
-      <img src="images/bus-800x560.svg" alt="suv" id="img-bus">
+      <img src="images/fleet-suv.png" alt="universal-suv" id="img-suv">
+      <img src="images/fleet-special.png" alt="universal-special" id="img-special">
+      <img src="images/fleet-bus.png" alt="universal-bus" id="img-bus">
     </div> <!-- End of Fleet Grid -->
   </section>
   <!-- Testimonials Section -->
   <section class="testimonials" id="testimonials">
-    <h1>Testimonials</h1>
+    <h1>Our Clients say</h1>
     <div class="testimonials-columns">
       <div class="testimonial-card">
         <div class="client-wrap">
-          <img src="images/user.png" alt="user1">
+          <img src="images/seitrack-logo.jpg" alt="seitrack-logo">
           <div class="client-text">
-            <h3>Seitrack --Ian Marty</h3>
+            <h3>Ian Marty</h3>
             <div class="star-rating">★★★★★</div>
-            <p>May 31, 2023</p>
+            <p>Seitrack</p>
           </div> <!-- 'client-text' ends -->
         </div> <!-- 'client-wrap' ends -->
         <p>I have hired ULL continuously since 2008 to solve our ground transportation and logistical needs. They have 
@@ -142,7 +142,15 @@
     </div>
     <div class="about-content">
       <h2>About Universal Latin Limo</h2>
-      <p>Universal Latin Limo was established in 2023 with the aim of providing top-notch ground transportation services...</p>
+      <p>
+        At <span>Universal Latin Limo &amp; Tours</span>, we are dedicated to providing unparalleled luxury ground transportation services tailored specifically for music artists and celebrities.
+        <br>
+        <br>
+        With over 20-years of experience in the industry, we have established ourselves as one of the most trusted and reliable partner available, ensuring our esteemed clients experience the epitome of elegance, comfort, and professionalism.
+        <br>
+        <br>
+        Our meticulously maintained fleet of top-of-the-line vehicles, driven by highly trained chauffeurs, guarantees a seamless and prestigious travel experience. We take pride in our unwavering commitment to discretion, privacy, and exceeding our clients' expectations. Choose <strong>Universal Latin Limo</strong> for a journey that reflects your status, style, and sophistication.
+      </p>
       <br>
       <h2 class="about-h2">Get in touch with us!</h2>
       <a href="tel:+8557338687" class="cta-button">📞 (855) 733-8687</a>
