Commit #9: Partners' logos added
Incorporation of Machete, Sony and Universal Music, Ocesa, Rock in Rio and Westwood Entertainment.
7 SVG files added and HTML/CSS modified.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
   </section>
   <div id="mob-hero"></div>
   <!-- Social Proof Section -->
+  <section class="sproof">
+    <img src="images/partner-machete-w.svg" alt="machete-music-logo" id="img-machete">
+    <img src="images/partner-ocesa-w.svg" alt="ocesa-logo" id="img-ocesa">
+    <img src="images/partner-universal-w.svg" alt="universal-music-logo" id="img-uni">
+    <img src="images/partner-sony-w.svg" alt="sony-music-logo" id="img-sony">
+    <img src="images/partner-rock-w.svg" alt="rock-in-rio-logo" id="img-rock">
+    <img src="images/partner-we-w.svg" alt="westwood-logo" id="img-westwood">
+  </section>
   <!-- Book Section -->
   <section id="book">
 	<a 
@@ -45,8 +53,7 @@
 	</a>
 	<script type="text/javascript" src="https://book.mylimobiz.com/v4/widgets/widget-loader.js"></script>
   </section>
-  <!-- Adding more padding-bottom to Book Section (because the code script is not editable) -->
-  <div class="div-spacing"></div>
+  <div class="div-spacing"></div> <!-- Adding more padding-bottom to Book Section (because the code script is not editable) -->
   <!-- Fleet Section -->
   <div class="interior-container"></div>
   <section class="fleet" id="fleet">
