--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
       <div class="copyright">© 2023 Universal Latin Limo</div>
       <div class="legal-info">
         <div class="legal-wrapper">
-          <a href="#terms">Terms of Service</a>
-          <a href="#privacy">Privacy Policy</a>
+          <a href="https://www.termsfeed.com/live/61699a20-6122-434a-9073-b6da15ca9cc3">Terms of Service</a>
+          <a href="https://www.termsfeed.com/live/268c60f6-c57e-4608-ac9b-c4147e4406c9">Privacy Policy</a>
         </div>
         <div class="legal-wrapper">
-          <a href="#legal">Legal Notice</a>
+          <a href="https://www.termsfeed.com/live/f69bd990-848a-442b-8f07-d47e53df4769">Cookies Policy</a>
           <a href="#accessibility">Accessibility</a>
         </div>
       </div>
