Commit #11: Phone and return button
2 new phone numbers now replace the old ones. New logo at the top and return back to Homepage button added at the end of 'book.html'

--- a/book.html
+++ b/book.html
@@ -2,15 +2,24 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>book</title>
+<title>Booking | Universal Latin Limo</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+  <!-- Navigation -->
+  <nav class="navbar">
+	<a href="index.html" class="logo">
+      <img src="images/logo-old.png" alt="Universal-Latin-Limo-logo">
+    </a>
+  </nav>
   <!-- Booking Section -->
   <section>
     <a href="https://book.mylimobiz.com/v4/universallatinlimo" data-ores-widget="website" data-ores-alias="universallatinlimo">Online Reservations</a>
 	<script type="text/javascript" src="https://book.mylimobiz.com/v4/widgets/widget-loader.js"></script>
+  </section>
+  <section class="return">
+	<a href="index.html" class="cta-button">Return to Homepage</a>
   </section>
 </body>
 </html>
