--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <link href="style.css" rel="stylesheet" type="text/css">
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
 <link rel="icon" type="image/png" href="/images/favicon.png">
-<title>ULL Tours</title>
+<title>Universal Latin Limo</title>
 </head>
 
 <body>
 <!-- Main Container -->
-<div class="container"> 
+<div class="container">
   <!-- Navigation -->
   <nav class="navbar">
 	<a href="index.html" class="logo">
@@ -160,7 +160,7 @@
       </p>
       <br>
       <h2 class="about-h2">Get in touch with us!</h2>
-      <a href="tel:+8557338687" class="cta-button">📞 (855) 733-8687</a>
+      <a href="tel:5623170944" class="cta-button">📞 (562) 317-0944</a>
       <a href="mailto:info@ulltours.com" class="cta-outline">✉️ info@ulltours.com</a>
     </div>
   </section>
@@ -173,8 +173,8 @@
       </div>
       <div class="contact-info">
         <h3>Contact Us</h3>
-        <a href="#">(855) 733-8687</a><br>
-        <a href="#">(323) 365-0223</a><br>
+        <a href="tel:5623170944">(562) 317-0944</a><br>
+        <a href="tel:3233650223">(323) 365-0223</a><br>
         <a href="#">info@ulltours.com</a>
       </div>
       <div class="site-map">
