Commit #12: Jonathan's main changes
On Thursday, July 13th 2023, Jonathan asked me to modify text on Hero Sction, change order of vehicles at Fleet Section, replace a phone number at About and Fotter Section.

--- a/index.html
+++ b/index.html
@@ -27,22 +27,13 @@
   </nav>
   <!-- Hero Section -->
   <section class="hero">
-    <h2>Universal Latin Limo &amp; Tours</h2>
+    <h2>Universal Latin Limo</h2>
     <h1>Ride with style<br>and rock the road</h1>
-    <p>Luxury ground-transportation for music stars on the move.</p>
+    <p>Luxury ground-transportation for celebrities on the move.</p>
     <a href="#book" class="cta-button">Book Now</a>
     <a href="#about" class="cta-outline">Contact Us</a>
   </section>
   <div id="mob-hero"></div>
-  <!-- Social Proof Section -->
-  <section class="sproof">
-    <img src="images/partner-machete-w.svg" alt="machete-music-logo" id="img-machete">
-    <img src="images/partner-ocesa-w.svg" alt="ocesa-logo" id="img-ocesa">
-    <img src="images/partner-universal-w.svg" alt="universal-music-logo" id="img-uni">
-    <img src="images/partner-sony-w.svg" alt="sony-music-logo" id="img-sony">
-    <img src="images/partner-rock-w.svg" alt="rock-in-rio-logo" id="img-rock">
-    <img src="images/partner-we-w.svg" alt="westwood-logo" id="img-westwood">
-  </section>
   <!-- Book Section -->
   <section id="book">
 	<a 
@@ -53,7 +44,15 @@
 	</a>
 	<script type="text/javascript" src="https://book.mylimobiz.com/v4/widgets/widget-loader.js"></script>
   </section>
-  <div class="div-spacing"></div> <!-- Adding more padding-bottom to Book Section (because the code script is not editable) -->
+  <!-- Social Proof Section -->
+  <section class="sproof">
+    <img src="images/partner-machete-w.svg" alt="machete-music-logo" id="img-machete">
+    <img src="images/partner-ocesa-w.svg" alt="ocesa-logo" id="img-ocesa">
+    <img src="images/partner-universal-w.svg" alt="universal-music-logo" id="img-uni">
+    <img src="images/partner-sony-w.svg" alt="sony-music-logo" id="img-sony">
+    <img src="images/partner-rock-w.svg" alt="rock-in-rio-logo" id="img-rock">
+    <img src="images/partner-we-w.svg" alt="westwood-logo" id="img-westwood">
+  </section>
   <!-- Fleet Section -->
   <div class="interior-container"></div>
   <section class="fleet" id="fleet">
@@ -64,17 +63,17 @@
       <h2 id="h2-bus">Buses</h2>
       <!-- SUV -->
       <ul id="ul-suv">
-        <li>Chevrolet Suburban</li>
         <li>Cadillac Escalade Lux SUV</li>
         <li>Lincoln Navigator Lux SUV</li>
+        <li>Chevrolet Suburban</li>
         <li>Expedition XLT</li>
         <li>Tahoe / Yukon</li>
       </ul>
       <!-- Special -->
       <ul id="ul-special">
-        <li>Sprinter 12 Passengers</li>
-        <li>Sprinter Exec</li>
         <li>Sprinter VIP</li>
+        <li>Sprinter Exec</li>
+        <li>Sprinter 12 Passengers</li>
         <li>Ford Transit Van</li>
       </ul>
       <!-- Bus -->
@@ -153,14 +152,14 @@
         At <span>Universal Latin Limo &amp; Tours</span>, we are dedicated to providing unparalleled luxury ground transportation services tailored specifically for music artists and celebrities.
         <br>
         <br>
-        With over 20-years of experience in the industry, we have established ourselves as one of the most trusted and reliable partner available, ensuring our esteemed clients experience the epitome of elegance, comfort, and professionalism.
+        With over 25-years of experience in the industry, we have established ourselves as one of the most trusted and reliable partner available, ensuring our esteemed clients experience the epitome of elegance, comfort, and professionalism.
         <br>
         <br>
         Our meticulously maintained fleet of top-of-the-line vehicles, driven by highly trained chauffeurs, guarantees a seamless and prestigious travel experience. We take pride in our unwavering commitment to discretion, privacy, and exceeding our clients' expectations. Choose <strong>Universal Latin Limo</strong> for a journey that reflects your status, style, and sophistication.
       </p>
       <br>
       <h2 class="about-h2">Get in touch with us!</h2>
-      <a href="tel:5623170944" class="cta-button">📞 (562) 317-0944</a>
+      <a href="tel:8557338687" class="cta-button">📞 (855) 733-8687</a>
       <a href="mailto:info@ulltours.com" class="cta-outline">✉️ info@ulltours.com</a>
     </div>
   </section>
@@ -173,7 +172,7 @@
       </div>
       <div class="contact-info">
         <h3>Contact Us</h3>
-        <a href="tel:5623170944">(562) 317-0944</a><br>
+        <a href="tel:8557338687">(855) 733-8687</a><br>
         <a href="tel:3233650223">(323) 365-0223</a><br>
         <a href="#">info@ulltours.com</a>
       </div>
