Commit #13: Testimonials hidden.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <p>I have hired ULL continuously since 2008 to solve our ground transportation and logistical needs. They have 
 			supported the artist that I have worked on their shows, tours, festivals and promotional events (even some personal trips too).</p>
       </div>
+	  <!-- 
       <div class="testimonial-card">
         <div class="client-wrap">
           <img src="images/user.png" alt="user2">
@@ -138,8 +139,8 @@
         </div> 
         <p>We've had great experiences with City Captain Transition and will continue to use them in the future. Always on time and 
           courteous drivers! Great Customer Service!! Clean Nice Ride!</p>
-      </div>
-    </div> <!-- 'testimonial-columns' ends -->
+      </div> -->	
+    </div>  <!-- 'testimonial-columns' ends -->
   </section>
   <!-- About Section -->
   <section class="about" id="about">
@@ -155,7 +156,16 @@
         With over 25-years of experience in the industry, we have established ourselves as one of the most trusted and reliable partner available, ensuring our esteemed clients experience the epitome of elegance, comfort, and professionalism.
         <br>
         <br>
-        Our meticulously maintained fleet of top-of-the-line vehicles, driven by highly trained chauffeurs, guarantees a seamless and prestigious travel experience. We take pride in our unwavering commitment to discretion, privacy, and exceeding our clients' expectations. Choose <strong>Universal Latin Limo</strong> for a journey that reflects your status, style, and sophistication.
+        Our meticulously maintained fleet of top-of-the-line vehicles, driven by highly trained chauffeurs, guarantees a seamless and prestigious travel experience. We take pride in our unwavering commitment to discretion, privacy, and exceeding our clients' expectations. 
+        <br>
+        <br>
+        We believe in putting our customers first, investing in the best technology, and always aiming for excellence to understand and satisfy the unique needs and demands of music artists and celebrities. We go above and beyond to ensure every aspect of your transportation experience is meticulously planned and flawlessly executed. 
+		<br>
+        <br>
+		From the moment you step into our luxurious vehicles, you'll be greeted with utmost professionalism and a commitment to personalized service. With our attention to detail, unrivaled customer care, and a passion for delivering exceptional experiences, we strive to create memories that last a lifetime. 
+        <br>
+        <br>
+        Trust <strong>Universal Latin Limo</strong> to provide you with the finest in luxury transportation, making every journey a remarkable one.
       </p>
       <br>
       <h2 class="about-h2">Get in touch with us!</h2>
