Backing up & Coming soon
Revamp is coming, stay tune.

--- a/index.html
+++ b/index.html
@@ -10,168 +10,26 @@
 </head>
 
 <body>
-<!-- Main Container -->
-<div class="container">
+<div class="container"> <!-- Main Container -->
   <!-- Navigation -->
   <nav class="navbar">
 	<a href="index.html" class="logo">
       <img src="images/logo-old.png" alt="Universal-Latin-Limo-logo">
     </a>
 	<ul class="nav-links">
+	<!--
       <li><a href="#about">About Us</a></li>
       <li><a href="#fleet">Our Fleet</a></li>
       <li><a href="#testimonials">Testimonials</a></li>
       <li><a href="#about">Contact Us</a></li>
       <li><a href="#book" id="nav-cta">Book Now</a></li>
-	</ul>
-  </nav>
-  <!-- Hero Section -->
-  <section class="hero">
-    <h2>Universal Latin Limo</h2>
-    <h1>Ride with style<br>and rock the road</h1>
-    <p>Luxury ground-transportation for celebrities on the move.</p>
-    <a href="#book" class="cta-button">Book Now</a>
-    <a href="#about" class="cta-outline">Contact Us</a>
-  </section>
-  <div id="mob-hero"></div>
-  <!-- Book Section -->
-  <section id="book">
-	<a 
-	href="https://book.mylimobiz.com/v4/universallatinlimo" 
-	data-ores-widget="quickres" 
-	data-ores-alias="universallatinlimo" 
-	data-redirect-url="book.html">Online Reservations
-	</a>
-	<script type="text/javascript" src="https://book.mylimobiz.com/v4/widgets/widget-loader.js"></script>
-  </section>
-  <!-- Social Proof Section -->
-  <section class="sproof">
-    <img src="images/partner-machete-w.svg" alt="machete-music-logo" id="img-machete">
-    <img src="images/partner-ocesa-w.svg" alt="ocesa-logo" id="img-ocesa">
-    <img src="images/partner-universal-w.svg" alt="universal-music-logo" id="img-uni">
-    <img src="images/partner-sony-w.svg" alt="sony-music-logo" id="img-sony">
-    <img src="images/partner-rock-w.svg" alt="rock-in-rio-logo" id="img-rock">
-    <img src="images/partner-we-w.svg" alt="westwood-logo" id="img-westwood">
-  </section>
-  <!-- Fleet Section -->
-  <div class="interior-container"></div>
-  <section class="fleet" id="fleet">
-    <h1>Our Fleet</h1>
-    <div class="fleet-grid">
-      <h2 id="h2-suv">SUV Private Vehicles</h2>
-      <h2 id="h2-special">Special Vehicles</h2>
-      <h2 id="h2-bus">Buses</h2>
-      <!-- SUV -->
-      <ul id="ul-suv">
-        <li>Cadillac Escalade Lux SUV</li>
-        <li>Lincoln Navigator Lux SUV</li>
-        <li>Chevrolet Suburban</li>
-        <li>Expedition XLT</li>
-        <li>Tahoe / Yukon</li>
-      </ul>
-      <!-- Special -->
-      <ul id="ul-special">
-        <li>Sprinter VIP</li>
-        <li>Sprinter Exec</li>
-        <li>Sprinter 12 Passengers</li>
-        <li>Ford Transit Van</li>
-      </ul>
-      <!-- Bus -->
-      <ul id="ul-bus">
-        <li>Mini-Bus: 8-18 people</li>
-        <li>Charter Bus: 8-18 people</li>
-        <br>
-      </ul>
-      <img src="images/fleet-suv.png" alt="universal-suv" id="img-suv">
-      <img src="images/fleet-special.png" alt="universal-special" id="img-special">
-      <img src="images/fleet-bus.png" alt="universal-bus" id="img-bus">
-    </div> <!-- End of Fleet Grid -->
-  </section>
-  <!-- Testimonials Section -->
-  <section class="testimonials" id="testimonials">
-    <h1>Our Clients say</h1>
-    <div class="testimonials-columns">
-      <div class="testimonial-card">
-        <div class="client-wrap">
-          <img src="images/seitrack-logo.jpg" alt="seitrack-logo">
-          <div class="client-text">
-            <h3>Ian Marty</h3>
-            <div class="star-rating">★★★★★</div>
-            <p>Seitrack</p>
-          </div> <!-- 'client-text' ends -->
-        </div> <!-- 'client-wrap' ends -->
-        <p>I have hired ULL continuously since 2008 to solve our ground transportation and logistical needs. They have 
-			supported the artist that I have worked on their shows, tours, festivals and promotional events (even some personal trips too).</p>
-      </div>
-	  <!-- 
-      <div class="testimonial-card">
-        <div class="client-wrap">
-          <img src="images/user.png" alt="user2">
-          <div class="client-text">
-            <h3>Client Two</h3>
-            <div class="star-rating">★★★★☆</div>
-            <p>May 24, 2023</p>
-          </div> 
-        </div> 
-        <p>Booked the service less than 24hrs and on a holiday. They confirmed via email, I received two text messages prior to my 
-          requested service time. The driver arrived early and was pleasant.</p>
-      </div>
-      <div class="testimonial-card">
-        <div class="client-wrap">
-          <img src="images/user.png" alt="user3">
-          <div class="client-text">
-            <h3>Client Three</h3>
-            <div class="star-rating">★★★★☆</div>
-            <p>May 24, 2023</p>
-          </div> 
-        </div> 
-        <p>Excellent service with Universal Latin Limo! This is the reason why I hired them a second time. We rented two Mercedes sprinters to pickup 
-          a group of people from the airport. They are very reliable and very responsive.</p>
-      </div>
-      <div class="testimonial-card">
-        <div class="client-wrap">
-          <img src="images/user.png" alt="user4">
-          <div class="client-text">
-            <h3>Client Four</h3>
-            <div class="star-rating">★★★★☆</div>
-            <p>May 24, 2023</p>
-          </div> 
-        </div> 
-        <p>We've had great experiences with City Captain Transition and will continue to use them in the future. Always on time and 
-          courteous drivers! Great Customer Service!! Clean Nice Ride!</p>
-      </div> -->	
-    </div>  <!-- 'testimonial-columns' ends -->
-  </section>
-  <!-- About Section -->
-  <section class="about" id="about">
-    <div class="about-image">
-      <img src="images/line-cars.jpg" alt="About us">
-    </div>
-    <div class="about-content">
-      <h2>About Universal Latin Limo</h2>
-      <p>
-        At <span>Universal Latin Limo &amp; Tours</span>, we are dedicated to providing unparalleled luxury ground transportation services tailored specifically for music artists and celebrities.
-        <br>
-        <br>
-        With over 25-years of experience in the industry, we have established ourselves as one of the most trusted and reliable partner available, ensuring our esteemed clients experience the epitome of elegance, comfort, and professionalism.
-        <br>
-        <br>
-        Our meticulously maintained fleet of top-of-the-line vehicles, driven by highly trained chauffeurs, guarantees a seamless and prestigious travel experience. We take pride in our unwavering commitment to discretion, privacy, and exceeding our clients' expectations. 
-        <br>
-        <br>
-        We believe in putting our customers first, investing in the best technology, and always aiming for excellence to understand and satisfy the unique needs and demands of music artists and celebrities. We go above and beyond to ensure every aspect of your transportation experience is meticulously planned and flawlessly executed. 
-		<br>
-        <br>
-		From the moment you step into our luxurious vehicles, you'll be greeted with utmost professionalism and a commitment to personalized service. With our attention to detail, unrivaled customer care, and a passion for delivering exceptional experiences, we strive to create memories that last a lifetime. 
-        <br>
-        <br>
-        Trust <strong>Universal Latin Limo</strong> to provide you with the finest in luxury transportation, making every journey a remarkable one.
-      </p>
-      <br>
-      <h2 class="about-h2">Get in touch with us!</h2>
-      <a href="tel:8557338687" class="cta-button">📞 (855) 733-8687</a>
-      <a href="mailto:info@ulltours.com" class="cta-outline">✉️ info@ulltours.com</a>
-    </div>
+	</ul> -->
+  </nav> 
+  <!-- Under construction Section -->
+  <section class="construction">
+	<h1>Coming Soon</h1>
+    <h3>🏗️ Our website is under construction 🚧</h3>
+    <div class="spinner"></div>
   </section>
   <!-- Footer Section -->
   <footer class="footer">
@@ -229,4 +87,5 @@
 </div> <!-- Main Container Ends -->
 <script></script>
 </body>
+	
 </html>
